--- a/react-app/.env.development
+++ b/react-app/.env.development
@@ -1,2 +1,4 @@
-VITE_APP_ACCESS_TOKEN=MLY|6295611443867695|a2b7c756ca3b62c2dc4ddbda87ee3f7d
+# This token is just for test, replace it with real Mapillary token
+VITE_APP_ACCESS_TOKEN='Your key'
+# change to real back-end server here
 VITE_APP_API_BASE_URL=http://localhost:8000/
